dev-vis-backend-lifecycle: improve successful logging statement in lifecycle